--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,22 @@
 
 <p>Hi all! My name is Anh Hoang, I created this portal with Angular to present my profile</p>
 
-<p>This page is being developing with Angular, and API service is <a href="https://anhhoang.life">https://anhhoang.life</a>, being developing with NodeJS (Express)</p>
+<p>This page is being developing with Angular, and API service is <a href="https://anhhoang.life">https://anhhoang.life</a>, being developing with NodeJS (Express). Both 
+  sites are deployed in Azure</p>
+
+<p>Some techniques I am using</p>
+
+<ul>
+  API
+  <li>NodeJS</li>
+  <li>MongoDB</li>
+  <li>AWS SES for sending email to me</li>
+  <li>Apache Kafka/Flink for streaming</li>
+  <li>Azure Web App</li>
+</ul>
+
+
+<ul>UI
+  <li>Angular</li>
+  <li>Azure Static Web App</li>  
+</ul>
