--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
 
 <p>Hi all! My name is Anh Hoang, I created this portal with Angular to present my profile</p>
 
+<p>My Github: <a href="https://github.com/htta17">https://github.com/htta17</a></p>
+
+
 <p>This page is being developing with Angular, and API service is <a href="https://anhhoang.life">https://anhhoang.life</a>, being developing with NodeJS (Express). Both 
   sites are deployed in Azure</p>
 
@@ -10,10 +13,11 @@
 <ul>
   API
   <li>NodeJS</li>
-  <li>MongoDB</li>
+  <li>MongoDB for database</li>
   <li>AWS SES for sending email to me</li>
-  <li>Apache Kafka/Flink for streaming</li>
-  <li>Azure Web App</li>
+  <li>Swagger for Documentation</li>
+  <li>Apache Kafka/Flink for streaming. What content? I don't know, will be need one. lol</li>
+  <li>Azure Web App for CI/CD</li>
 </ul>
 
 
