--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <h1>Profile</h1>
 
 <p>Hi all! My name is Anh Hoang, I created this portal with Angular to present my profile</p>
