--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<app-header></app-header>
+<div class="page-content">
+  <app-header></app-header>
+
+</div>
+
 <h1>Profile</h1>
 
 <p>Hi all! My name is Anh Hoang, I created this portal with Angular to present my profile</p>
@@ -26,3 +30,5 @@
   <li>Angular</li>
   <li>Azure Static Web App</li>  
 </ul>
+
+
