--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -40,6 +40,14 @@
                             <i class='bx bx-envelope'></i>Contact Me</a>
                     </li>
                     <li class="nav-item p-1 rounded">
+                        <mat-radio-group  style="margin-top: 5px;" aria-label="Select a language">
+                            <mat-radio-button value="en" >
+                                English
+                            </mat-radio-button>
+                            <mat-radio-button value="vn" class="pl-3">
+                                Tieng Viet
+                            </mat-radio-button>
+                        </mat-radio-group>
                     </li>
                 </ul>
             </div>
