--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,15 +5,15 @@
 
 <h1>Profile</h1>
 
-<p>Hi all! My name is Anh Hoang, I created this portal with Angular to present my profile</p>
+<p>Hi all! My name is Anh Hoang, I created this portal with Angular to present my profile, show some DYI projects (making tables, benches, gardening) or play with kids.</p>
+<p>This site is being developed during my free time, so right now it doesn't look good.</p>
 
 <p>My Github: <a href="https://github.com/htta17">https://github.com/htta17</a></p>
 
 
-<p>This page is being developing with Angular, and API service is <a href="https://anhhoang.life">https://anhhoang.life</a>, being developing with NodeJS (Express). Both 
-  sites are deployed in Azure</p>
+<p>This page uses Angular, and API service is in <a href="https://anhhoang.life">https://anhhoang.life</a>, with NodeJS (Express). Both sites are deployed in Azure</p>
 
-<p>Some techniques I am using</p>
+<p>Some techniques I am using:</p>
 
 <ul>
   API
@@ -27,7 +27,8 @@
 
 
 <ul>UI
-  <li>Angular</li>
+  <li>Angular 17</li>
+  <li>Angular Material </li>
   <li>Azure Static Web App</li>  
 </ul>
 
