--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,21 +5,22 @@
 
 <h1>Profile</h1>
 
-<p>Hi all! My name is Anh Hoang, I created this portal with Angular to present my profile, show some DYI projects (making tables, benches, gardening) or play with kids.</p>
+<p>Hi all! My name is Anh Hoang, I created this site to present my profile, show some DYI projects (making tables, benches, or gardening) or keep unforgetable memory (playing with kids, travelling).</p>
 <p>This site is being developed during my free time, so right now it doesn't look good.</p>
 
 <p>My Github: <a href="https://github.com/htta17">https://github.com/htta17</a></p>
 
 
-<p>This page uses Angular, and API service is in <a href="https://anhhoang.life">https://anhhoang.life</a>, with NodeJS (Express). Both sites are deployed in Azure</p>
+<p>This page uses Angular version, and API service is in <a href="https://anhhoang.life">https://anhhoang.life</a>, with NodeJS (Express). Both sites are deployed in Azure</p>
 
-<p>Some techniques I am using:</p>
+<p>Some techniques I am using (or will be used):</p>
 
 <ul>
   API
   <li>NodeJS</li>
   <li>MongoDB for database</li>
   <li>AWS SES for sending email to me</li>
+  <li>JWT for authentication</li>
   <li>Swagger for Documentation</li>
   <li>Apache Kafka/Flink for streaming. What content? I don't know, will be need one. lol</li>
   <li>Azure Web App for CI/CD</li>
@@ -30,6 +31,7 @@
   <li>Angular 17</li>
   <li>Angular Material </li>
   <li>Azure Static Web App</li>  
+  <li>Admin portal (for changing profile info, choosing styling, upload images) will be in <a href="https://main.anhhoang.life/manage">https://main.anhhoang.life/manage</a></li>
 </ul>
 
 
